terraform/security.tf
resource "aws_security_group" "frontend_sg" {
  name        = "endgame-frontend-sg"
  description = "Allow HTTP and SSH traffic for frontend"
  vpc_id      = data.terraform_remote_state.api.outputs.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
